made several changes
removed intermediate files
made possible to run in linux